<?xml version="1.0"?>
<package>
  <name>bugs</name>
  <version>0.0.0</version>
  <description>The bugs</description>


  <maintainer email="agn@todo.todo">agn</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nav_msgs </build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>nav_msgs </run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>


  </export>
</package> 
